--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/rtsp_service_button"
-        android:layout_width="240dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:onClick="startStopRtsp"
         android:text="@string/start_stream_button"
@@ -20,8 +20,8 @@
 
     <Button
         android:id="@+id/start_message_activity_button"
-        android:layout_width="240dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:onClick="startMessageActivity"
         android:text="@string/message_activity_button"
@@ -32,8 +32,8 @@
 
     <Button
         android:id="@+id/audio_activity_button"
-        android:layout_width="240dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:onClick="startAudioActivity"
         android:text="@string/audio_activity_button"
@@ -44,8 +44,8 @@
 
     <Button
         android:id="@+id/settings_button"
-        android:layout_width="240dp"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:onClick="startSettingsActivity"
         android:text="@string/settings_button_label"
